--- a/src/components/generic/Button/NeonButtons.css
+++ b/src/components/generic/Button/NeonButtons.css
@@ -8,7 +8,6 @@
     border: white;
     cursor: pointer;
     border: white;
-    margin: auto;
 }
 
 .ClearButton {
@@ -20,20 +19,18 @@
     color: white;
     border: white;
     cursor: pointer;
-    margin: auto;
 }
 
 .PauseButton {
     background-color: black;
     border-radius: 30px;
-    box-shadow: 0 0 7px #FF0C12, 0 0 10px #FF0C12, 0 0 42px #FF0C12;
-    text-shadow: 0 0 7px #FF0C12, 0 0 10px #FF0C12, 0 0 42px #FF0C12,
-    0 0 82px #FF0C12, 0 0 92px #FF0C12, 0 0 102px #FF0C12, 0 0 151px #FF0C12;
+    box-shadow: 0 0 7px #ffffff, 0 0 10px #f9ff76, 0 0 42px #f4ff00;
+    text-shadow: 0 0 7px #f4ff00, 0 0 10px #f4ff00, 0 0 42px #f4ff00,
+    0 0 82px #f4ff00, 0 0 92px #f4ff00, 0 0 102px #f4ff00, 0 0 151px #f4ff00;
     color: white;
     border: white;
     cursor: pointer;
     border: white;
-    margin: auto;
 }
 
 .RestartButton {
@@ -46,7 +43,6 @@
     border: white;
     cursor: pointer;
     border: white;
-    margin: auto;
 }
 
 .smallButton {
@@ -54,7 +50,6 @@
     border-radius: 30px;
     box-shadow: 0 0 7px #f08cffaf, 0 0 10px #f08cff, 0 0 42px #e35ff7,
     0 0 82px #e643ff, 0 0 92px #dd00ff83, 0 0 102px #dd00ff83, 0 0 151px #dd00ff83;
-    margin: 0px;
     text-shadow: 0 0 7px #f08cffaf, 0 0 10px #f08cff, 0 0 42px #e35ff7,
     0 0 82px #e643ff, 0 0 92px #dd00ff83, 0 0 102px #dd00ff83, 0 0 151px #dd00ff83;
     color:#e643ff;
